--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/estilos-1.css">
+    <title>Federico Ramos - Juegos</title>
 </head>
 <body>
-    <h1>Tarea con Pair Programing</h1>
+    <header class="head-title">
+        <h1 class="title">Juegos</h1>
+    </header>
+
+    <main class="games">
+        <span class="games-subtitle">
+            Los más vendidos
+        </span>
+
+        <article class="all-games">
+            <p class="game-title">
+                Mario Kart 8 Deluxe
+            </p>
+            <figure class="image">
+                <img src="./assets/images/img/mario-kart-8-deluxe.jpg" alt="imagen del juego Mario Kart 8 deluxe" class="game-img">
+            </figure>
+        </article>
+
+        <article class="all-games">
+            <p class="game-title">
+                Mortal Kombat 11
+            </p>
+            <figure class="image">
+                <img src="./assets/images/img/mortal-kombat-11.jpg" alt="imagen del juego Mortal Kombat 11" class="game-img">
+            </figure>
+        </article>
+    </main>
 </body>
 </html>
