añadí botones de compra e comencé las páginas html

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                     Además, ¡los inklings aparecen como personajes invitados junto con otro personajes de juegos anteriores, como el Rey Bú, Huesitos y Bowser Jr!
                 </p>
             </figcaption>
+            <div class="button-box">
+                <a href="http://" class="button">Comprar!</a>
+            </div>
         </article>
 
         <article class="all-games">
@@ -55,6 +58,9 @@
                     Este nuevo título ofrece múltiples modos de juego, incluyendo las Torres del Tiempo,los que permiten a los jugadores poner a prueba sus habilidades a través de varios desafíos y disfrutar de Mortal Kombat 11 de muchas otras maneras.
                 </p>
             </figcaption>
+            <div class="button-box">
+                <a href="http://" class="button">Comprar!</a>
+            </div>
         </article>
     </main>
 </body>
