terminé la primera parte del proyecto

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <article class="all-games">
             <p class="game-title">
-                Mario Kart 8 Deluxe
+                Mario Kart™ 8 Deluxe
             </p>
             <figure class="image">
                 <img src="./assets/images/img/mario-kart-8-deluxe.jpg" alt="imagen del juego Mario Kart 8 deluxe" class="game-img">
@@ -36,7 +36,7 @@
                 </p>
             </figcaption>
             <div class="button-box">
-                <a href="http://" class="button">Comprar!</a>
+                <a href="./pages/firstGame.html" class="button">Comprar!</a>
             </div>
         </article>
 
@@ -59,9 +59,10 @@
                 </p>
             </figcaption>
             <div class="button-box">
-                <a href="http://" class="button">Comprar!</a>
+                <a href="./pages/secondGame.html" class="button">Comprar!</a>
             </div>
         </article>
     </main>
+    <footer class="foot">Desarrolado por misitio.com</footer>
 </body>
 </html>
