--- a/index.html
+++ b/index.html
@@ -3,20 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/estilos-1.css">
+    <link rel="stylesheet" href="./css/estilos-02.css"> 
+    <!--<link rel="stylesheet" href="./css/estilos-01.css">  -->    
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Federico Ramos - Juegos</title>
 </head>
 <body>
     <header class="head-title">
         <h1 class="title">Juegos</h1>
+        <div class="logo">
+            <i class='bx bx-moon'></i>
+        </div>
     </header>
-
     <main class="games">
-        <span class="games-subtitle">
-            Los más vendidos
-        </span>
 
-        <article class="all-games">
+        <div class="box-message">
+            <span class="message">
+                Los más vendidos
+            </span>
+            <i class='bx bxs-hot'></i>
+        </div>
+
+        <article class="box-game">
             <p class="game-title">
                 Mario Kart™ 8 Deluxe
             </p>
@@ -34,13 +42,19 @@
                 <p class="text">
                     Además, ¡los inklings aparecen como personajes invitados junto con otro personajes de juegos anteriores, como el Rey Bú, Huesitos y Bowser Jr!
                 </p>
+                <div class="botones">
+                    <a href="#" class="boton"><i class='bx bx-heart'></i></a>
+                    <a href="#" class="boton"><i class='bx bx-share-alt'></i></a>
+                    <a href="#" class="boton"><i class='bx bx-cart-add'></i></a>
+                    <a href="#" class="boton"><i class='bx bx-bookmark-plus'></i></a>
+                </div>
+                <div class="buy-button">
+                    <a href="./pages/firstGame.html" class="buy">Comprar!</a>
+                </div>
             </figcaption>
-            <div class="button-box">
-                <a href="./pages/firstGame.html" class="button">Comprar!</a>
-            </div>
         </article>
 
-        <article class="all-games">
+        <article class="box-game">
             <p class="game-title">
                 Mortal Kombat 11
             </p>
@@ -57,10 +71,16 @@
                 <p class="text">
                     Este nuevo título ofrece múltiples modos de juego, incluyendo las Torres del Tiempo,los que permiten a los jugadores poner a prueba sus habilidades a través de varios desafíos y disfrutar de Mortal Kombat 11 de muchas otras maneras.
                 </p>
+                <div class="botones">
+                    <a href="#" class="boton"><i class='bx bx-heart'></i></a>
+                    <a href="#" class="boton"><i class='bx bx-share-alt'></i></a>
+                    <a href="#" class="boton"><i class='bx bx-cart-add'></i></a>
+                    <a href="#" class="boton"><i class='bx bx-bookmark-plus'></i></a>
+                </div>
+                <div class="buy-button">
+                    <a href="./pages/firstGame.html" class="buy">Comprar!</a>
+                </div>
             </figcaption>
-            <div class="button-box">
-                <a href="./pages/secondGame.html" class="button">Comprar!</a>
-            </div>
         </article>
     </main>
     <footer class="foot">Desarrolado por misitio.com</footer>
