--- a/pages/secondGame.html
+++ b/pages/secondGame.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Federico Ramos - Juegos</title>
-    <link rel="stylesheet" href="../css/estilos-1,2.css">
+    <link rel="stylesheet" href="../css/estilos-games.css">
 </head>
 <body>
     <header class="head-title">
