--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
         </article>
 
         <article class="box-game">
-            <p class="game-title">
-                Mortal Kombat 11
-            </p>
+                <p class="game-title">
+                    Mortal Kombat 11
+                </p>
+            </a>
             <figure class="image">
                 <img src="./assets/images/img/mortal-kombat-11.jpg" alt="imagen del juego Mortal Kombat 11" class="game-img">
             </figure>
@@ -78,7 +79,7 @@
                     <a href="#" class="boton"><i class='bx bx-bookmark-plus'></i></a>
                 </div>
                 <div class="buy-button">
-                    <a href="./pages/firstGame.html" class="buy">Comprar!</a>
+                    <a href="./pages/secondGame.html" class="buy">Comprar!</a>
                 </div>
             </figcaption>
         </article>
