--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/estilos-01.css">
+    <!--<link rel="stylesheet" href="./css/estilos-01.css">  -->
+    <link rel="stylesheet" href="./css/estilos-02.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Federico Ramos - Juegos</title>
 </head>
 <body>
@@ -14,9 +16,12 @@
         </div>
     </header>
     <main class="games">
-        <span class="games-subtitle">
-            Los más vendidos
-        </span>
+        <div class="box-message">
+            <span class="message">
+                Los más vendidos
+            </span>
+            <i class='bx bxs-hot'></i>
+        </div>
 
         <article class="box-game">
             <p class="game-title">
