--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--<link rel="stylesheet" href="./css/estilos-01.css">  -->
+    <!-- <link rel="stylesheet" href="./css/estilos-01.css"> -->
     <link rel="stylesheet" href="./css/estilos-02.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> 
     <title>Federico Ramos - Juegos</title>
 </head>
 <body>
@@ -24,9 +24,9 @@
         </div>
 
         <article class="box-game">
-            <p class="game-title">
+            <a href="./pages/firstGame.html" class="game-title">
                 Mario Kart™ 8 Deluxe
-            </p>
+            </a>
             <figure class="image">
                 <img src="./assets/images/img/mario-kart-8-deluxe.jpg" alt="imagen del juego Mario Kart 8 deluxe" class="game-img">
             </figure>
@@ -54,9 +54,9 @@
         </article>
 
         <article class="box-game">
-                <p class="game-title">
+                <a href="./pages/secondGame.html" class="game-title">
                     Mortal Kombat 11
-                </p>
+                </a>
             </a>
             <figure class="image">
                 <img src="./assets/images/img/mortal-kombat-11.jpg" alt="imagen del juego Mortal Kombat 11" class="game-img">
