--- a/pages/secondGame.html
+++ b/pages/secondGame.html
@@ -1,23 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet" href="../css/estilos-games.css"> -->
+    <link rel="stylesheet" href="../css/estilos-games-02.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Federico Ramos - Juegos</title>
-    <link rel="stylesheet" href="../css/estilos-games.css">
 </head>
 <body>
     <header class="head-title">
-        <h1 class="title"><a href="../index.html" class="text-title">Juegos</a>
+        <h1 class="title"><a href="../index.html">Juegos</a></h1>
+        <div class="logo">
+            <i class='bx bx-moon'></i>
+        </div>
     </header>
-    <main class="contenedor">
+    <main class="games">
+        <div class="box-arrow">
+            <a href="../index.html">
+                <i class='bx bxs-chevrons-left'></i>
+            </a>
+            <a href="../pages/firstGame.html">
+                <i class='bx bxs-chevrons-right' ></i>
+            </a>
+        </div>
         <article class="box-game">
-
-            <figure class="imagen-box">
-                <img src="../assets/images/img/mortal-kombat-11.jpg" alt="Imagen del juego Mortal Kombat 11" class="img">
+            <!-- Se que la img esta fuera del figure, lo hice de esta manera para que esta se encuentre fuera del figure y así lograr el efecto de estar por encima -->
+            <figure class="image">
             </figure>
-
-            <div class="imagenes-box">
+            <img src="../assets/images/img/mortal-kombat-11.jpg" alt="imagen del juego Mario Kart 8 deluxe" class="game-img">
+            <p class="game-title">
+                Mortal Kombat 11
+            </p>
+            <div class="imagenes-box"> 
                 <figure class="imgs">
                     <img src="../assets/images/img/mortal-kombat-11-(1).jpg" alt="Imagen del juego Mortal Kombat 11"class="masImg">
                 </figure>
@@ -28,25 +43,37 @@
                     <img src="../assets/images/img/mortal-kombat-11-(3).jpg" alt="Imagen del juego Mortal Kombat 11" class="masImg">
                 </figure>
             </div>
+            <div class="plataform">
+                <span class="name-plataform">Playstation</span>
+                <span class="name-plataform">PC</span>
+                <span class="name-plataform">Xbox</span>
+            </div>
+            <figcaption class="game-description">
+                <h2 class="text">
+                    MK está de vuelta mejor que nunca con la siguiente evolución de la emblemática franquicia. 
+                </h2>
+                <p class="text">
+                    La Edición Estándar de Mortal Kombat 11 incluye: <br>
 
-            <div class="titulo-juego">
-                <a href="../index.html">Juegos</a> > Mortal Kombat 11
-            </div>
-            <div class="descripcion">Descripción</div>
-            <p class="desc-text">
-                Mortal Kombat está de vuelta mejor que nunca con la siguiente evolución de la emblemática franquicia. Con las nuevas variaciones de personaje tendrás un control sin precedentes para personalizar a tus luchadores y hacerlos únicos. El nuevo motor gráfico resalta cada uno de los momentos más sangrientos para ponerte tan cerca de la pelea que casi podrás sentirla. Con un reparto de luchadores nuevos y klásicos, el modo historia cinemático continúa la épica saga iniciada hace más de 25 años. ncluye todos los 13 personajes agregados incluyendo Shao Kahn, Shang Tsung, Nightwolf, Terminator, Sindel, El Guasón, Spawn, Fujin, Sheeva, RoboCop y los recién agregados Mileena, Rain y Rambo.
-            </p>
-            <div class="precio-box">
-                <div class="precio">$34.999</div>
-            </div>
-            <div class="botones">
-                <button>Comprar Ahora</button>
-            </div>
+                    • Juego principal <br>
+
+                    Con las nuevas variaciones de personaje tendrás un control sin precedentes para personalizar a tus luchadores y hacerlos únicos. El nuevo motor gráfico resalta cada uno de los momentos más sangrientos para ponerte tan cerca de la pelea que casi podrás sentirla. Con un reparto de luchadores nuevos y klásicos, el modo historia cinemático continúa la épica saga iniciada hace más de 25 años.
+                </p>
+                <div class="botones">
+                    <a href="#" class="boton"><i class='bx bxl-steam'></i></a>
+                    <a href="#" class="boton"><i class='bx bx-heart'></i></a>
+                    <a href="#" class="boton"><i class='bx bx-bookmark-plus'></i></a>
+                </div>
+                <div class="precio">
+                    <span>$37.699</span>
+                </div>
+                <div class="buy-button">
+                    <a href="#" class="buy">Descargar Ahora</a>
+                </div>
+            </figcaption>
         </article>
     </main>
     <footer class="foot">
-        <p class="foot-text">Desarrolado por misitio.com</p>
+        <span class="text-foot">Creado por misitio.com</span>
     </footer>
-
 </body>
-</html>
