--- a/index.html
+++ b/index.html
@@ -3,25 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/estilos-01.css">
+    <!-- <link rel="stylesheet" href="./css/estilos-01.css"> -->
+    <link rel="stylesheet" href="./css/estilos-02.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> 
     <title>Federico Ramos - Juegos</title>
 </head>
 <body>
     <header class="head-title">
         <h1 class="title">Juegos</h1>
+        <div class="logo">
+            <i class='bx bx-moon'></i>
+        </div>
     </header>
     <main class="games">
-
         <div class="box-message">
             <span class="message">
                 Los más vendidos
             </span>
+            <i class='bx bxs-hot'></i>
         </div>
 
         <article class="box-game">
-            <p class="game-title">
+            <a href="./pages/firstGame.html" class="game-title">
                 Mario Kart™ 8 Deluxe
-            </p>
+            </a>
             <figure class="image">
                 <img src="./assets/images/img/mario-kart-8-deluxe.jpg" alt="imagen del juego Mario Kart 8 deluxe" class="game-img">
             </figure>
@@ -36,16 +41,22 @@
                 <p class="text">
                     Además, ¡los inklings aparecen como personajes invitados junto con otro personajes de juegos anteriores, como el Rey Bú, Huesitos y Bowser Jr!
                 </p>
-            </figcaption>
+                <div class="botones">
+                    <a href="#" class="boton"><i class='bx bx-heart'></i></a>
+                    <a href="#" class="boton"><i class='bx bx-share-alt'></i></a>
+                    <a href="#" class="boton"><i class='bx bx-cart-add'></i></a>
+                    <a href="#" class="boton"><i class='bx bx-bookmark-plus'></i></a>
+                </div>
                 <div class="buy-button">
                     <a href="./pages/firstGame.html" class="buy">Comprar!</a>
                 </div>
+            </figcaption>
         </article>
 
         <article class="box-game">
-                <p class="game-title">
+                <a href="./pages/secondGame.html" class="game-title">
                     Mortal Kombat 11
-                </p>
+                </a>
             </a>
             <figure class="image">
                 <img src="./assets/images/img/mortal-kombat-11.jpg" alt="imagen del juego Mortal Kombat 11" class="game-img">
@@ -60,10 +71,16 @@
                 <p class="text">
                     Este nuevo título ofrece múltiples modos de juego, incluyendo las Torres del Tiempo,los que permiten a los jugadores poner a prueba sus habilidades a través de varios desafíos y disfrutar de Mortal Kombat 11 de muchas otras maneras.
                 </p>
-            </figcaption>
+                <div class="botones">
+                    <a href="#" class="boton"><i class='bx bx-heart'></i></a>
+                    <a href="#" class="boton"><i class='bx bx-share-alt'></i></a>
+                    <a href="#" class="boton"><i class='bx bx-cart-add'></i></a>
+                    <a href="#" class="boton"><i class='bx bx-bookmark-plus'></i></a>
+                </div>
                 <div class="buy-button">
                     <a href="./pages/secondGame.html" class="buy">Comprar!</a>
                 </div>
+            </figcaption>
         </article>
     </main>
     <footer class="foot">Desarrolado por misitio.com</footer>
