Corrigiendo detalles a la personalizacion

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
         </div>
 
         <article class="box-game">
-            <a href="./pages/firstGame.html" class="game-title">
-                Mario Kart™ 8 Deluxe
-            </a>
+            <span class="box-title">
+                <a href="./pages/firstGame.html" class="game-title">
+                    Mario Kart™ 8 Deluxe
+                </a>
+            </span>
             <figure class="image">
                 <img src="./assets/images/img/mario-kart-8-deluxe.jpg" alt="imagen del juego Mario Kart 8 deluxe" class="game-img">
             </figure>
@@ -54,9 +56,11 @@
         </article>
 
         <article class="box-game">
-                <a href="./pages/secondGame.html" class="game-title">
-                    Mortal Kombat 11
-                </a>
+                <span class="box-title">
+                    <a href="./pages/secondGame.html" class="game-title">
+                        Mortal Kombat 11
+                    </a>
+                </span>
             </a>
             <figure class="image">
                 <img src="./assets/images/img/mortal-kombat-11.jpg" alt="imagen del juego Mortal Kombat 11" class="game-img">
