--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
         </div>
 
         <article class="box-game">
-            <a href="./pages/firstGame.html" class="game-title">
-                Mario Kart™ 8 Deluxe
-            </a>
+            <span class="box-title">
+                <a href="./pages/firstGame.html" class="game-title">
+                    Mario Kart™ 8 Deluxe
+                </a>
+            </span>
             <figure class="image">
                 <img src="./assets/images/img/mario-kart-8-deluxe.jpg" alt="imagen del juego Mario Kart 8 deluxe" class="game-img">
             </figure>
