--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- <link rel="stylesheet" href="./css/estilos-01.css"> -->
     <link rel="stylesheet" href="./css/estilos-02.css"> 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> 
-    <title>Federico Ramos - Juegos</title>
+    <title>Federico Ramos - Mariana de Oliveira - Juegos</title>
 </head>
 <body>
     <header class="head-title">
@@ -20,7 +20,7 @@
             <span class="message">
                 Los más vendidos
             </span>
-            <i class='bx bxs-hot'></i>
+            <i class='bx bxs-hot2'></i>
         </div>
 
         <article class="box-game">
