--- a/pages/firstGame.html
+++ b/pages/firstGame.html
@@ -19,43 +19,41 @@
     </header>
     <main class="games">
         <div class="box-message">
-            <span class="message1">
+            <span class="message">
                 ¡Un divertidisimo juego de velocidad para toda la familia!
             </span>
             <i class='bx bxs-hot'></i>
         </div>
 
 <article class="box-game">
- <figure class="image2">
+    <figure class="image">
         <img src="../assets/images/img/maxresdefault.jpg" alt="imagen del juego Mario Kart 8 deluxe" class="game-img"> 
     </figure>
     <figcaption class="game-description">
-        <p class="text1">
+        <p class="text">
             Acelera a través de las pistas del Reino Champiñón bajo el agua, en el cielo, de cabeza y sin gravedad, y llega a la meta para obtener la victoria.
         </p>
-        <p class="text1">
+        <p class="text">
             Mario Kart 8 Deluxe es una nueva versión del divertido título de conducción arcade original de 2014 de Wii U ahora para Nintendo Switch a cargo de Nintendo, con todos los contenidos descargables incluidos y nuevos pilotos como los personajes de Splatoon, el Rey Boo o Bowsy, entre otros. 
-        <p class="text1">
+        <p class="text">
             Incluye también multijugador local para hasta 8 jugadores y nuevos circuitos rescatados de otras entregas de la saga, así como un apartado audiovisual mejorado.
         </p>
         </p>
-        <figure class="image2">
+        <figure class="image">
             <img src="../assets/images/img/booster_hero_img.jpg" alt="imagen del juego Mario Kart 8 deluxe" class="game-img"> 
         </figure>
-        <p class="text1">
+        <p class="text">
             ¡Corre con Mario y sus amigos donde quieras y cuando quieras!
         </p>
         
-        <div class="buy-button2">
-            <a href="./pages/firstGame.html" class="buy1">Comprar!</a>
+        <div class="buy-button">
+            <a href="./pages/firstGame.html" class="buy">Comprar!</a>
         </div>
-
-        
+        <div class="Volver-button">
+            <a href="../index.html" class="volver">Volver</a>
+        </div>
     </figcaption>
 </article> >
-<div class="Volver-button">
-    <a href="../index.html" class="volver">Volver</a>
-</div>
     </main>
     <footer class="foot"> Desarrolado por misitio.com</footer>
 </body>
